# bcg_project

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  main.cpp
dep/tinyfiledialogs/: tinyfiledialogs.h
include/: CMakeLists.txt
include/animation/: AlfaAnimation.h  Animation.h  ByBrightnessAnimation.h  DebugAnimation.h  DimmingAnimation.h  FlyAnimation.h  ObjectAnimation.h  PixelAnimation.h  RingAnimation.h  ScaleAnimation.h  SlideAnimation.h
include/gui/: AnimControlButton.h  AnimatedImage.h  Button.h  Canvas.h  DropdownList.h  ImageButton.h  NextFrameControl.h  Object.h  Panel.h  PanelButtons.h  PanelTimeline.h  SaveButton.h  Settings.h  StartStopControl.h  TextButton.h  Timeline.h
include/program/: Program.h
include/root/: Root.h
include/util/: ExtendedMath.h
res/fonts/: TerminusTTF.h
src/animation/: AlfaAnimation.cpp  Animation.cpp  ByBrightnessAnimation.cpp  DimmingAnimation.cpp  FlyAnimation.cpp  ObjectAnimation.cpp  PixelAnimation.cpp  RingAnimation.cpp  ScaleAnimation.cpp  SlideAnimation.cpp
src/gui/: AnimControlButton.cpp  AnimatedImage.cpp  Button.cpp  Canvas.cpp  DropdownList.cpp  ImageButton.cpp  NextFrameControl.cpp  Object.cpp  Panel.cpp  PanelButtons.cpp  PanelTimeline.cpp  SaveButton.cpp  Settings.cpp  StartStopControl.cpp  TextButton.cpp  Timeline.cpp
src/program/: Program.cpp
